fix selection state bg color in dark mode

--- a/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
+++ b/packages/frontend/@n8n/design-system/src/css/_tokens.dark.scss
@@ -211,7 +211,7 @@
 	--color-button-secondary-border: var(--p-gray-070);
 	--color-button-secondary-background: var(--color-background-light);
 	--color-button-secondary-hover-active-focus-font: var(--p-color-primary-220);
-	--color-button-secondary-hover-background: transparent;
+	--color-button-secondary-hover-background: var(--color-background-light);
 	--color-button-secondary-active-focus-background: var(--p-color-primary-320-a-010);
 	--color-button-secondary-focus-outline: var(--p-color-primary-320-a-035);
 	--color-button-secondary-disabled-font: var(--p-white-a-030);
